css/style.css
/* CSS for index.html */

html, body, #container { height: 100%; }
body > #container { height: auto; min-height: 100%; }


body 
{ 
	background-image:url(../images/assets/background.jpg);	
	background-repeat:repeat;
	color:#fff;

}

/* Center the grid */

#grid 
{ 
	margin-left:auto;
	margin-right:auto;
	/*border: 1px white solid; */

	border: 1px solid rgba(0,0,0,0.5);
	border-radius: 8px 8px 8px 8px;
 	background: rgba(0,0,0,0.25);
	
	box-shadow: 10px 10px 10px rgba(0,0,0,0.5); 
    -o-box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
	-webkit-box-shadow: 10px 10px 10px rgba(0,0,0,0.5); 
	-moz-box-shadow: 10px 10px 10px rgba(0,0,0,0.5); 
}


/* Center Form */

#pieceSelection, #javascriptDisabled-warning
{ 
	text-align:center;
	color:#fff
}
/* Status Messages*/
#notifications
{
	text-align:center;
	width:100%;
	height:20px;
}

#footer 
{
	clear: both;
 	position: relative;
 	z-index: 10;
 	height: 3em;
 	margin-top: -3em;

}

#footer ul
{
	margin:0;
	padding:0;
	list-style:none;
	text-align:center;

} 


#footer li
{
	display:inline;
	padding:5px;
}

